--- a/package.json
+++ b/package.json
@@ -22,5 +22,13 @@
   "devDependencies": {
     "concurrently": "^5.1.0",
     "nodemon": "^2.0.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/di0nys1s/dev-connector.git"
+  },
+  "bugs": {
+    "url": "https://github.com/di0nys1s/dev-connector/issues"
+  },
+  "homepage": "https://github.com/di0nys1s/dev-connector#readme"
 }
