--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
 	"description": "Social network for devs",
 	"main": "server.js",
 	"scripts": {
-		"start": "nodemon server.js",
-		"server": "nodemon server.js"
+		"start": "node server",
+		"server": "nodemon server",
+		"client": "npm start --prefix client",
+		"dev": "concurrently \"npm run server\" \"npm run client\""
 	},
 	"author": "dionys1s",
 	"license": "ISC",
